# jwt-compact

./: .clippy.toml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-reusable.yml  ci.yml  gh-pages.yml  rust.yml  scheduled.yml
benches/: encoding.rs
crates/jwt-compact/: Cargo.toml
crates/jwt-compact/benches/: encoding.rs
crates/jwt-compact/src/: alg.rs  claims.rs  jwk.rs  lib.rs  token.rs  traits.rs
crates/jwt-compact/src/alg/: eddsa_compact.rs  eddsa_dalek.rs  eddsa_sodium.rs  es256k.rs  generic.rs  hmacs.rs  k256.rs  p256.rs  rsa.rs
crates/jwt-compact/tests/: algorithms.rs  jwk.rs  rsa.rs
crates/jwt-compact/tests/shared/: mod.rs
e2e-tests/: README.md
e2e-tests/no-std/: Cargo.toml  README.md  build.rs
e2e-tests/no-std/.cargo/: config.toml
e2e-tests/no-std/src/: main.rs
e2e-tests/wasm/: Cargo.toml  README.md  package-lock.json  package.json  test.js
e2e-tests/wasm/src/: lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
jwt_compact/: all.html  enum.Claim.html  enum.CreationError.html  enum.ParseError.html  enum.Thumbprint.html  enum.ValidationError.html  index.html  sidebar-items.js  struct.Claims.html  struct.Empty.html  struct.Header.html  struct.Renamed.html  struct.SignedToken.html  struct.TimeOptions.html  struct.Token.html  struct.UntrustedToken.html  struct.Validator.html  trait.Algorithm.html  trait.AlgorithmExt.html  trait.AlgorithmSignature.html
jwt_compact/alg/: enum.ModulusBits.html  enum.RsaError.html  index.html  sidebar-items.js  struct.Ed25519.html  struct.Es256.html  struct.Es256k.html  struct.Hs256.html  struct.Hs256Key.html  struct.Hs256Signature.html  struct.Hs384.html  struct.Hs384Key.html  struct.Hs384Signature.html  struct.Hs512.html  struct.Hs512Key.html  struct.Hs512Signature.html  struct.ModulusBitsError.html  struct.Rsa.html  struct.RsaParseError.html  struct.RsaPrivateKey.html  struct.RsaPublicKey.html  struct.RsaSignature.html  struct.SecretBytes.html  struct.StrongAlg.html  struct.StrongKey.html  struct.WeakKeyError.html  trait.SigningKey.html  trait.VerifyingKey.html
jwt_compact/alg/eddsa_sodium/: struct.Ed25519.html
jwt_compact/alg/es256k/: struct.Es256k.html
jwt_compact/alg/generic/: struct.SecretBytes.html  trait.SigningKey.html  trait.VerifyingKey.html
jwt_compact/alg/hmacs/: struct.Hs256.html  struct.Hs256Key.html  struct.Hs256Signature.html  struct.Hs384.html  struct.Hs384Key.html  struct.Hs384Signature.html  struct.Hs512.html  struct.Hs512Key.html  struct.Hs512Signature.html
jwt_compact/alg/p256/: struct.Es256.html
jwt_compact/alg/rsa/: enum.ModulusBits.html  enum.RsaError.html  struct.ModulusBitsError.html  struct.Rsa.html  (+4 more)
jwt_compact/claims/: struct.Claims.html  struct.Empty.html  struct.TimeOptions.html
jwt_compact/error/: enum.Claim.html  enum.CreationError.html  enum.ParseError.html  enum.ValidationError.html
jwt_compact/jwk/: enum.JsonWebKey.html  enum.JwkError.html  enum.KeyType.html  index.html  sidebar-items.js  struct.RsaPrimeFactor.html  struct.RsaPrivateParts.html
jwt_compact/prelude/: index.html
jwt_compact/token/: enum.Thumbprint.html  struct.Header.html  struct.SignedToken.html  struct.Token.html  struct.UntrustedToken.html
jwt_compact/traits/: struct.Renamed.html  struct.Validator.html  trait.Algorithm.html  trait.AlgorithmExt.html  trait.AlgorithmSignature.html
search.desc/jwt_compact/: jwt_compact-desc-0-.js
search.index/: 01266d62f24f.js  02b0e7c051e5.js  03559c7273df.js  070ad8883623.js  079106eb3df4.js  079b8e7dcd19.js  07eee90d3a18.js  0b097c37535f.js  0b8a859676b9.js  0c1dba60e136.js  10e1dbcdb803.js  10e2fab0119c.js  12b36f8e55da.js  12eda74eb871.js  142310a46d75.js  14813c2e229b.js  15228b2d6d45.js  1596d555f8a6.js  17d6605e1f3a.js  1a551e8e31e7.js  1b1658b8806b.js  1b4bad3f5526.js  1be95a0032a8.js  1c087d0f1c07.js  1dd7fb017ce8.js  1ea25bc1fc3a.js  1f09e0a19365.js  253c838ac46c.js  253ceb91e55c.js  255973c56375.js  2610c0cc298c.js  2993d8b07b38.js  29b0943be05f.js  2a434e4446d7.js  2a75eeffdcc7.js  2b7db985d0ba.js  2dc987429bc3.js  30c45d4e63b5.js  340b856450cc.js  35336dfd8581.js  (+59 more)
search.index/crateNames/: 10ae48edcdd5.js
search.index/desc/: 02e3a840655c.js  f41371276c97.js
search.index/entry/: 0f7e92ace69c.js  10d193c352dc.js
search.index/function/: 8663cddd55f6.js  fa2f2bb6ade1.js
search.index/generic_inverted_index/: 2e35d929cd05.js  378b80ef2ad9.js
search.index/name/: a0819ed24af2.js  de41954de48f.js
search.index/normalizedName/: 594c7799cf81.js  c8e8dcf6f10d.js
search.index/path/: 2423e23d26f0.js  4b84258b54c8.js
search.index/type/: 3fac00f95f76.js  d5243342f640.js
src/: alg.rs  claims.rs  error.rs  jwk.rs  lib.rs  token.rs  traits.rs
src/alg/: digest_compat.rs  eddsa_compact.rs  eddsa_dalek.rs  eddsa_sodium.rs  es256k.rs  generic.rs  hmacs.rs  k256.rs  p256.rs  rsa.rs
src/jwt_compact/: alg.rs.html  claims.rs.html  error.rs.html  jwk.rs.html  lib.rs.html  token.rs.html  traits.rs.html
test-no-std/: Cargo.toml  README.md
test-no-std/src/: main.rs
test-wasm/: Cargo.toml  README.md  test.js
test-wasm/src/: lib.rs
tests/: algorithms.rs  jwk.rs  rsa.rs  thumbprints.rs  version_match.rs
tests/rsa/: mod.rs
tests/shared/: mod.rs
trait.impl/zeroize/: trait.Zeroize.js
(+39 files in other folders)
