[package]
name = "jwt-compact"
version = "0.9.0-beta.1"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Akhil Velagapudi <akhilvelagapudi@gmail.com>",
  "Frank Denis <github@pureftpd.org>",
  "Maximilian Münchow <github@maxmuen.de>",
  "Eran Rundstein <eran@rundste.in>",
  "Bruno Green",
]
edition = "2021"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"
keywords = ["JWT", "token", "authorization"]
categories = ["web-programming", "cryptography", "no-std"]
description = "Minimalistic JWT implementation with focus on type safety and secure cryptographic primitives"
repository = "https://github.com/slowli/jwt-compact"

exclude = ["e2e-tests"]

[package.metadata.docs.rs]
# Enable non-conflicting additional algorithms in documentation on `docs.rs`.
features = ["exonum-crypto", "es256k", "p256", "rsa"]
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Public dependencies (present in the public API).
anyhow = { version = "1.0.100", default-features = false }
base64ct = { version = "1.5.2", features = ["alloc"] }
ciborium = { version = "0.2.2", default-features = false, optional = true }
chrono = { version = "0.4.42", default-features = false }
rand_core = "0.9.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# SHA crypto backend (private dependency; re-exported `digest` crate is public).
hmac = "=0.13.0-rc.2"
sha2 = { version = "=0.11.0-rc.2", default-features = false }

# Private dependencies (not exposed in the public API).
smallvec = "1.15.1"
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Crypto backends (all public dependencies).
secp256k1 = { version = "0.31", optional = true }

[dependencies.k256]
version = "=0.14.0-rc.0"
default-features = false
features = ["ecdsa"]
optional = true

[dependencies.p256]
version = "=0.14.0-rc.0"
default-features = false
features = ["ecdsa"]
optional = true

[dependencies.exonum-crypto]
version = "1.0.0"
default-features = false
features = ["sodiumoxide-crypto"]
optional = true

[dependencies.ed25519-dalek]
version = "=3.0.0-pre.1"
optional = true
default-features = false

[dependencies.ed25519-compact]
version = "2.1.1"
optional = true
default-features = false

[dependencies.rsa]
version = "=0.10.0-rc.9"
optional = true
default-features = false

[dev-dependencies]
assert_matches = "1.3"
const-decoder = "0.4.0"
criterion = "0.7.0"
crypto-bigint = "=0.7.0-rc.9"
crypto-primes = "=0.7.0-pre.3"
doc-comment = "0.3.4"
hex-buffer-serde = "0.4.0"
rand = "0.9.2"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
version-sync = "0.9"

[features]
default = ["std", "clock", "ciborium"]
# Enables `std`-specific functionality (such as error types implementing
# the standard `Error` trait).
std = ["anyhow/std", "serde_json/std", "ciborium?/std"]
# Enables getting the current time using `Utc::now()` from `chrono`.
# Without it, some `TimeOptions` constructors, such as the `Default` impl,
# are not available. It is still possible to create `TimeOptions`
# with an excplicitly specified clock function, or to set / verify
# time-related `Claims` fields manually.
clock = ["chrono/clock"]
# `secp256k1` crypto backend.
es256k = ["secp256k1"]
ed25519-compact = ["dep:ed25519-compact", "rand_core/os_rng"]
# RSA algorithm and its dependencies (currently, `getrandom`-based RNG).
rsa = ["dep:rsa", "rand_core/os_rng", "sha2/oid"]

[[bench]]
name = "encoding"
harness = false
path = "benches/encoding.rs"
required-features = ["std", "clock"]

[[test]]
name = "rsa"
path = "tests/rsa.rs"
required-features = ["rsa/encoding"]

[workspace]
members = [".", "e2e-tests/no-std", "e2e-tests/wasm"]
