[workspace]
resolver = "3"
members = ["crates/jwt-compact", "e2e-tests/no-std", "e2e-tests/wasm"]

[workspace.package]
version = "0.9.0-beta.1"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Akhil Velagapudi <akhilvelagapudi@gmail.com>",
  "Frank Denis <github@pureftpd.org>",
  "Maximilian Münchow <github@maxmuen.de>",
  "Eran Rundstein <eran@rundste.in>",
  "Bruno Green",
]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
keywords = ["JWT", "token", "authorization"]
categories = ["web-programming", "cryptography", "no-std"]
repository = "https://github.com/slowli/jwt-compact"

[workspace.dependencies]
# External dependencies
anyhow = { version = "1.0.100", default-features = false }
assert_matches = "1.3"
base64ct = { version = "1.5.2" }
chrono = { version = "0.4.42", default-features = false }
ciborium = { version = "0.2.2", default-features = false }
const-decoder = "0.4.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
criterion = "0.7.0"
crypto-bigint = "=0.7.0-rc.10"
crypto-primes = "=0.7.0-pre.4"
doc-comment = "0.3.4"
ed25519-compact = {version = "2.2.0", default-features = false }
ed25519-dalek = { version = "=3.0.0-pre.1", default-features = false }
embedded-alloc = "0.6.0"
exonum-crypto = { version = "1.0.0", default-features = false }
getrandom = "0.3.4"
hex-buffer-serde = "0.4.0"
hmac = "=0.13.0-rc.3"
k256 = { version = "=0.14.0-rc.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
p256 = { version = "=0.14.0-rc.0", default-features = false }
panic-halt = "1.0.0"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = "0.9.3"
rsa = { version = "=0.10.0-rc.10", default-features = false }
secp256k1 = "0.31"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false }
smallvec = "1.15.1"
subtle = { version = "2.6.1", default-features = false }
uuid = "1.18.1"
version-sync = "0.9"
wasm-bindgen = "0.2.99"
zeroize = "1.8"

# Local dependencies
jwt-compact = { version = "=0.9.0-beta.1", default-features = false, path = "crates/jwt-compact" }
