[package]
name = "jwt-compact-wasm"
version = "0.0.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing usability of `jwt-compact` in WASM"
repository = "https://github.com/slowli/jwt-compact"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
getrandom = { version = "0.2.0", features = ["js"] }
pem = "0.8.1"

# Multiple other dependencies lead to `serde/std` being enabled
# (e.g., `rsa`, `wasm-bindgen/serde-serialize`, `get_random/js`).
# Hence, we enable `serde_cbor/std` to avoid compilation errors.
serde_cbor = "0.11.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.jwt-compact]
version = "0.2.0"
path = ".."
default_features = false
features = ["ed25519-compact", "rsa"]
