[package]
name = "jwt-compact-nostd"
version = "0.0.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing usability of `jwt-compact` in no-std env"
repository = "https://github.com/slowli/jwt-compact"
publish = false

[dependencies]
anyhow = { version = "1.0.34", default-features = false }
chrono = { version = "0.4.22", default-features = false }
const-decoder = "0.2.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# Cortex-M dependencies.
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.7"
alloc-cortex-m = "0.4.1"
panic-halt = "0.2.0"

# RSA-specific dependencies. Everything besides `rsa` is needed to set up an RNG.
getrandom = { version = "0.2", features = ["custom"], optional = true }
once_cell = { version = "1.8.0", default-features = false, optional = true }
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
rsa = { version = "0.6", default-features = false, optional = true }

[dependencies.jwt-compact]
version = "0.5.0"
path = "../.."
default-features = false

[profile.release]
opt-level = "z" # Optimize for size, rather than speed
lto = true

# Crypto backends are included as features in order to not overflow
# flash memory of the (emulated) microcontroller.
[features]
ed25519 = ["getrandom", "once_cell", "rand_chacha", "jwt-compact/ed25519-compact"]
with_rsa = ["getrandom", "once_cell", "rand_chacha", "rsa", "jwt-compact/with_rsa"]

[workspace]
# ^-- Needed to prevent setting the `std` flag for crates (is this a cargo bug?).
