[package]
name = "jwt-compact-nostd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `jwt-compact` in no-std env"
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
const-decoder.workspace = true
serde = { workspace = true, features = ["alloc", "derive"] }

# Cortex-M dependencies.
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-alloc.workspace = true
panic-halt.workspace = true

# RSA-specific dependencies. Everything besides `rsa` is needed to set up an RNG.
getrandom = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
rsa = { workspace = true, features = ["encoding"], optional = true }

jwt-compact.workspace = true

# Crypto backends are included as features in order to not overflow
# flash memory of the (emulated) microcontroller.
[features]
ed25519 = ["getrandom", "once_cell", "rand_chacha", "jwt-compact/ed25519-compact"]
rsa = ["getrandom", "once_cell", "rand_chacha", "dep:rsa", "jwt-compact/rsa"]
