[package]
name = "jwt-compact-wasm"
version = "0.0.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Testing usability of `jwt-compact` in WASM"
repository = "https://github.com/slowli/jwt-compact"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"

chrono = { version = "0.4.42", features = ["wasmbind"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Set up `getrandom` crate to use the host JS CSPRNG.
getrandom = { version = "0.2", features = ["js"] }

[dependencies.jwt-compact]
path = "../.."
default-features = false
features = ["clock", "ed25519-compact", "rsa", "k256", "p256"]
