[package]
name = "jwt-compact-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `jwt-compact` in WASM"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
chrono = { workspace = true, features = ["wasmbind"] }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json = { workspace = true, features = ["alloc"] }
# Set up `getrandom` crate to use the host JS CSPRNG.
getrandom = { workspace = true, features = ["wasm_js"] }

[dependencies.jwt-compact]
workspace = true
features = ["clock", "ed25519-compact", "rsa", "k256", "p256"]
